update dockerfile, don't select by number

--- a/docker/Dockerfile.clang
+++ b/docker/Dockerfile.clang
@@ -1,5 +1,5 @@
 FROM localhost/my_editor:base
 
 RUN apt-get update && \
-    apt-get install -y gdb clang-11 && \
+    apt-get install -y gdb clang && \
     rm -rf /var/lib/apt/lists/*
